// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inquirerer checkbox 1`] = `
{
  "checkbox": [
    {
      "name": "b",
      "value": true,
    },
    {
      "name": "c",
      "value": true,
    },
  ],
}
`;

exports[`Inquirerer checkbox w/options 1`] = `
{
  "checkbox": [
    {
      "name": "a",
      "value": false,
    },
    {
      "name": "b",
      "value": true,
    },
    {
      "name": "c",
      "value": true,
    },
  ],
}
`;

exports[`Inquirerer handles multiple questions 1`] = `
[
  "",
  "",
]
`;

exports[`Inquirerer handles multiple questions 2`] = `[]`;

exports[`Inquirerer prompts user and correctly processes delayed input 1`] = `
[
  "",
]
`;

exports[`Inquirerer prompts user and correctly processes delayed input 2`] = `[]`;
